Tried to add entity framework

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BloggingDatabase": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost; Database=user_database; User Id=sa; Password=<YourStrong!Passw0rd>123 Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -8,4 +8,4 @@
     }
   },
   "AllowedHosts": "*"
-}
+}    
